# ProyectoInferencia

./: CMakeLists.txt
include/: ProposicionesConConectores.h  Relacion.h  Unificacion.h  manejoDeClausulas.h  maquinaDeInferencia.h  procesarConector.h
src/: IntroduccionAIaProyecto2.cpp  ProposicionesConConectores.cpp  Relacion.cpp  Unificacion.cpp  main.cpp  manejoDeClausulas.cpp  maquinaDeInferencia.cpp  procesarConector.cpp
